--- a/index.html
+++ b/index.html
@@ -3,239 +3,135 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
-    <header class="page-header">
-      <div class="container header-container">
-        <nav class="page-nav">
-          <a class="logo" href="./index.html"
-            >Web<span class="first-logo">Studio</span></a
-          >
-
-          <ul class="menu">
-            <li class="menu-item-studio">
-              <a class="item-name" href="./index.html">Studio</a>
-            </li>
-            <li class="menu-item-s">
-              <a class="item-name" href="">Portfolio</a>
-            </li>
-            <li class="menu-item-s">
-              <a class="item-name" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="page-adress">
-          <ul class="menu-item-link">
-            <li class="menu-item">
-              <a class="menu-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="menu-item">
-              <a class="menu-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-    </header>
     <main>
-      <!-- ==========HERO========== -->
+      <header class="page-header">
+        <div class="container header-container">
+          <a class="logo" href="./index.html">Web<span class="first-logo">Studio</span></a>
+          <nav class="page-nav">
+            <ul class="menu">
+              <li class="menu-item menu-item-studio">
+                <a class="menu-item-link" href="./studio.html">
+                  <span class="item-name">Studio</span>
+                </a>
+              </li>
+              <li class="menu-item menu-item-portfolio">
+                <a class="menu-item-link" href="./portfolio.html">
+                  <span class="item-name">Portfolio</span>
+                </a>
+              </li>
+              <li class="menu-item menu-item-contacts">
+                <a class="menu-item-link" href="./contacts.html">
+                  <span class="item-name">Contacts</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      <!-- HERO -->
       <section class="hero">
         <div class="container hero-container">
-          <h1 class="hero-name">Effective Solutions for Your Business</h1>
           <div class="hero-content-wrapper">
-            <button type="button" class="order-button">Order Service</button>
+            <h1 class="hero-name" style="max-width: 496px;">Your Studio for Web Solutions</h1>
+            <button class="order-btn" type="button">Order Service</button>
           </div>
         </div>
       </section>
-      <!-- ==========Переваги========== -->
+
+      <!-- OUR BENEFITS -->
       <section class="benefits">
-        <div class="container">
-          <!-- заголовок потім приховаю через стилі -->
-          <h2>Our benefits</h2>
-          <ul class="benefits-ls">
-            <li>
-              <h3 class="benefits-name">Strategy</h3>
-              <p class="benefits-ds">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li>
-              <h3 class="benefits-name">Punctuality</h3>
-              <p class="benefits-ds">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li>
-              <h3 class="benefits-name">Diligence</h3>
-              <p class="benefits-ds">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3 class="benefits-name">Technologies</h3>
-              <p class="benefits-ds">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+        <div class="container benefits-ls">
+          <div>
+            <h2 class="benefits-name">Benefit 1</h2>
+            <p class="benefits-ds">Description 1</p>
+          </div>
+          <div>
+            <h2 class="benefits-name">Benefit 2</h2>
+            <p class="benefits-ds">Description 2</p>
+          </div>
+          <div>
+            <h2 class="benefits-name">Benefit 3</h2>
+            <p class="benefits-ds">Description 3</p>
+          </div>
         </div>
       </section>
-      <!-- ==========Our Team========== -->
+
+      <!-- OUR TEAM -->
       <section class="page-our-team">
-        <div class="container">
-          <h2 class="our-team">Our Team</h2>
-          <ul class="team-ls">
-            <li class="our-team-ls">
-              <img
-                src="./images/our-team/mark-guerrero.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-ds">Product Designer</p>
-            </li>
-            <li class="our-team-ls">
-              <img
-                src="./images/our-team/tom-ford.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-ds">Frontend Developer</p>
-            </li>
-            <li class="our-team-ls">
-              <img
-                src="./images/our-team/camila-garcia.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-ds">Marketing</p>
-            </li>
-            <li class="our-team-ls">
-              <img
-                src="./images/our-team/daniel-wilson.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-ds">UI Designer</p>
-            </li>
-          </ul>
+        <h2 class="our-team">Our Team</h2>
+        <div class="container team-ls">
+          <div class="our-team-ls">
+            <img src="./images/our-team/1.jpg" alt="Team member 1" />
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-ds">CEO</p>
+          </div>
+          <div class="our-team-ls">
+            <img src="./images/our-team/2.jpg" alt="Team member 2" />
+            <h3 class="team-name">Jane Smith</h3>
+            <p class="team-ds">Designer</p>
+          </div>
+          <div class="our-team-ls">
+            <img src="./images/our-team/3.jpg" alt="Team member 3" />
+            <h3 class="team-name">Alice Johnson</h3>
+            <p class="team-ds">Developer</p>
+          </div>
         </div>
       </section>
 
-      <!-- Our Portfolio -->
-
+      <!-- OUR PORTFOLIO -->
       <section class="page-portfolio">
         <div class="container">
           <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-ls">
             <div class="li1">
-            <li>
-              <img
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Banking App</h3>
-              <p class="portfolio-ds">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Cashless Payment</h3>
-              <p class="portfolio-ds">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Meditation App</h3>
-              <p class="portfolio-ds">App</p>
-            </li>
+              <li>
+                <img src="./images/our-portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
+                <h3 class="portfolio-name">Cashless Payment</h3>
+                <p class="portfolio-ds">App</p>
+              </li>
+              <li>
+                <img src="./images/our-portfolio/travel-mobile-app.jpg" alt="Travel Mobile App" width="360" height="300" />
+                <h3 class="portfolio-name">Travel Mobile App</h3>
+                <p class="portfolio-ds">App</p>
+              </li>
             </div>
             <div class="li2">
-            <li>
-              <img
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Taxi Service</h3>
-              <p class="portfolio-ds">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/screen-lllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Screen Illustrations</h3>
-              <p class="portfolio-ds">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Online Courses</h3>
-              <p class="portfolio-ds">Marketing</p>
-            </li>
+              <li>
+                <img src="./images/our-portfolio/restaurant-app.jpg" alt="Restaurant App" width="360" height="300" />
+                <h3 class="portfolio-name">Restaurant App</h3>
+                <p class="portfolio-ds">App</p>
+              </li>
+              <li>
+                <img src="./images/our-portfolio/smart-home-app.jpg" alt="Smart Home App" width="360" height="300" />
+                <h3 class="portfolio-name">Smart Home App</h3>
+                <p class="portfolio-ds">App</p>
+              </li>
+              <li>
+                <img src="./images/our-portfolio/music-app.jpg" alt="Music App" width="360" height="300" />
+                <h3 class="portfolio-name">Music App</h3>
+                <p class="portfolio-ds">App</p>
+              </li>
             </div>
           </ul>
         </div>
       </section>
+
+      <!-- FOOTER -->
+      <footer class="lower-page">
+        <div class="container">
+          <a class="second-logo" href="./index.html">Web<span class="second-lg">Studio</span></a>
+          <ul>
+            <li class="lower-page-text"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="lower-page-text"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li class="lower-page-text"><a href="https://goo.gl/maps/AdrVSpF3kwp6Wic98">SLC street. 15, apartment 23</a></li>
+          </ul>
+        </div>
+      </footer>
     </main>
-    <footer class="lower-page">
-      <div class="container">
-        =
-        <a class="second-lg" href="./index.html"
-          >Web<span class="second-logo">Studio</span></a
-        >
-        <p class="lower-page-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-        
-      </div>
-    </footer>
   </body>
 </html>
