--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container hero-container">
           <h1 class="hero-name">Effective Solutions for Your Business</h1>
           <div class="hero-content-wrapper">
-            <button type="button" class="order-button">Order Service</button>
+            <button type="button" class="order-button-s">Order Service</button>
           </div>
         </div>
       </section>
