--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-name">Effective Solutions for Your Business</h1>
-          <div class="hero-content-wrapper">
+          <!-- <div class="hero-content-wrapper"> -->
             <button type="button" class="order-button-s">Order Service</button>
-          </div>
+          <!-- </div> -->
         </div>
       </section>
       <!-- ==========Переваги========== -->
