--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <li class="menu-item-studio">
               <a class="item-name" href="./index.html">Studio</a>
             </li>
-            <li class="menu-item-s menu-item-studio">
+            <li class="menu-item-s">
               <a class="item-name" href="">Portfolio</a>
             </li>
-            <li class="menu-item-s menu-item-studio">
+            <li class="menu-item-s">
               <a class="item-name" href="">Contacts</a>
             </li>
           </ul>
