--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
           <!-- заголовок потім приховаю через стилі -->
           <h2>Our benefits</h2>
-          <ul class="benefits-ls">
+          <ul class="benefits-ls-s">
             <li>
               <h3 class="benefits-name">Strategy</h3>
               <p class="benefits-ds">
