--- a/index.html
+++ b/index.html
@@ -67,31 +67,30 @@
       <!-- ==========Переваги========== -->
       <section class="benefits">
         <div class="container">
-          <!-- заголовок потім приховаю через стилі -->
-          <h2>Our benefits</h2>
-          <ul class="benefits-ls-s">
-            <li>
+          <h2 class="visually-hidden">Our benefits</h2>
+          <ul class="benefits-ls">
+            <li class="benefits-item">
               <h3 class="benefits-name">Strategy</h3>
               <p class="benefits-ds">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="benefits-item">
               <h3 class="benefits-name">Punctuality</h3>
               <p class="benefits-ds">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="benefits-item">
               <h3 class="benefits-name">Diligence</h3>
               <p class="benefits-ds">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="benefits-item">
               <h3 class="benefits-name">Technologies</h3>
               <p class="benefits-ds">
                 Design practice focused on digital experiences. We bring forth a
