--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
       </section>
       <!-- ==========Переваги========== -->
       <section class="benefits">
+        <h2 class="visually-hidden">Our benefits</h2>
         <div class="container">
-          <h2 class="visually-hidden">Our benefits</h2>
+          <!-- <h2 class="visually-hidden">Our benefits</h2> -->
           <ul class="benefits-ls">
             <li class="benefits-item">
               <h3 class="benefits-name">Strategy</h3>
