--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       </section>
       <!-- ==========Переваги========== -->
       <section class="benefits">
-        <h2 class="visually-hidden">Our benefits</h2>
+        <!-- <h2 class="visually-hidden">Our benefits</h2> -->
         <div class="container">
-          <!-- <h2 class="visually-hidden">Our benefits</h2> -->
+          <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-ls">
             <li class="benefits-item">
               <h3 class="benefits-name">Strategy</h3>
@@ -113,8 +113,11 @@
                 width="264"
                 height="260"
               />
+              <div class="team-info">
               <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-ds">Product Designer</p>
+              <p class="team-ds">Product Designe
+                </p>
+              </div>
             </li>
             <li class="our-team-ls">
               <img
@@ -123,8 +126,10 @@
                 width="264"
                 height="260"
               />
+              <div class="team-info">
               <h3 class="team-name">Tom Ford</h3>
-              <p class="team-ds">Frontend Developer</p>
+              <p class="team-ds">Frontend Develo</p>
+            </div>
             </li>
             <li class="our-team-ls">
               <img
@@ -133,9 +138,11 @@
                 width="264"
                 height="260"
               />
+              <div class="team-info">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-ds">Marketing</p>
-            </li>
+               </div>           
+              </li>
             <li class="our-team-ls">
               <img
                 src="./images/our-team/daniel-wilson.jpg"
@@ -143,8 +150,10 @@
                 width="264"
                 height="260"
               />
+              <div class="team-info">
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-ds">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
