--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
       </section>
 
       <!-- Our Portfolio -->
-
+      
       <section class="page-portfolio">
         <div class="container">
           <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-ls">
-            <div class="li1">
+            <!-- <div class="li1"> -->
             <li>
               <img
                 src="./images/our-portfolio/banking-app.jpg"
@@ -195,8 +195,8 @@
               <h3 class="portfolio-name">Meditation App</h3>
               <p class="portfolio-ds">App</p>
             </li>
-            </div>
-            <div class="li2">
+            <!-- </div>
+            <div class="li2"> -->
             <li>
               <img
                 src="./images/our-portfolio/taxi-service.jpg"
@@ -227,7 +227,7 @@
               <h3 class="portfolio-name">Online Courses</h3>
               <p class="portfolio-ds">Marketing</p>
             </li>
-            </div>
+            <!-- </div> -->
           </ul>
         </div>
       </section>
