--- a/index.html
+++ b/index.html
@@ -165,68 +165,74 @@
           <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-ls">
             <!-- <div class="li1"> -->
-            <li>
+            <li class="portfolio-li">
               <img
                 src="./images/our-portfolio/banking-app.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
-              />
+              /> 
+              <div class="portfolio-info">
               <h3 class="portfolio-name">Banking App</h3>
               <p class="portfolio-ds">App</p>
-            </li>
-            <li>
+            </div></li>
+            <li class="portfolio-li">
               <img
                 src="./images/our-portfolio/cashless-payment.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
-              />
+              /> 
+              <div class="portfolio-info">
               <h3 class="portfolio-name">Cashless Payment</h3>
               <p class="portfolio-ds">Marketing</p>
-            </li>
-            <li>
+            </div></li>
+            <li class="portfolio-li">
               <img
                 src="./images/our-portfolio/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
-              />
+              /> 
+              <div class="portfolio-info">
               <h3 class="portfolio-name">Meditation App</h3>
               <p class="portfolio-ds">App</p>
-            </li>
+            </div></li>
             <!-- </div>
             <div class="li2"> -->
-            <li>
+            <li class="portfolio-li">
               <img
                 src="./images/our-portfolio/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
-              />
+              /> 
+              <div class="portfolio-info">
               <h3 class="portfolio-name">Taxi Service</h3>
               <p class="portfolio-ds">Marketing</p>
-            </li>
-            <li>
+            </div></li>
+            <li class="portfolio-li">
               <img
                 src="./images/our-portfolio/screen-lllustrations.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
-              />
+              /> 
+              <div class="portfolio-info">
               <h3 class="portfolio-name">Screen Illustrations</h3>
               <p class="portfolio-ds">Design</p>
-            </li>
-            <li>
+            </div></li>
+            <li class="portfolio-li">
               <img
                 src="./images/our-portfolio/online-courses.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
-              />
+              /> 
+              <div class="portfolio-info">
               <h3 class="portfolio-name">Online Courses</h3>
               <p class="portfolio-ds">Marketing</p>
-            </li>
+            </div></li>
             <!-- </div> -->
           </ul>
         </div>
