--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
             <li class="menu-item-studio">
               <a class="item-name" href="./index.html">Studio</a>
             </li>
-            <li class="menu-item-s">
+            <li class="menu-item-studio">
               <a class="item-name" href="">Portfolio</a>
             </li>
-            <li class="menu-item-s">
+            <li class="menu-item-studio">
               <a class="item-name" href="">Contacts</a>
             </li>
           </ul>
         </nav>
+
         <address class="page-adress">
           <ul class="menu-item-link">
             <li class="menu-item">
@@ -238,7 +239,7 @@
         </div>
       </section>
     </main>
-    
+
     <footer class="lower-page">
       <div class="container">
         
